--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ rgba(255, 255, 255, 0.6) текст номера телефона и почты 
     --hero-button-background-color:#188CE8;
     --footer-address-text:rgba(255, 255, 255, 0.6);
     --primary-icon-color:#AFB1B8;
+    --fon-color:rgba(47, 48, 58, 0.8);
+    --bgc-hover-portfolio:rgba(33, 150, 243, 0.9);
 }
 
 body {
@@ -176,6 +178,21 @@ span.logo-black {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+}
+
+.corrent{
+    position: relative;
+}
+
+.corrent::after {
+    content:"";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    background-color: var(--accent-text-color);
+
 }
 
 /* ------------------- Hero---------------------- */
@@ -344,6 +361,34 @@ span.logo-black {
 margin-left: 30px;
 }
 
+.we-doing-checklist{
+    position: relative;
+}
+
+.we-doing-title{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    margin: 0 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
+        
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    
+    color: var(--secondary-text-color);
+    background-color: var(--fon-color);
+    
+    
+}
+
 /*------------------- section team-----------------*/
 .section-team {
     background-color: var(--secondary-background-color);
@@ -506,6 +551,43 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     margin-bottom: 0;
 }
 
+.blue{
+    position: relative;
+    overflow: hidden;
+}
+
+.blue-text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 63px 24px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2 ,1);
+
+    background-color: var(--bgc-hover-portfolio);
+    color: var(--secondary-text-color);
+
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+
+}
+
+.section-works-checklist{
+    border: 1px solid #EEEEEE;
+}
+
+.section-works-checklist:hover .blue-text,
+.section-works-checklist:focus .blue-text{
+
+    transform: translateY(0%);
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 
 /* ------------------------clients--------------------- */
 
@@ -646,8 +728,66 @@ background-color:var(--accent-text-color);
 }
 
 .footer-map:hover,
-.footer-link:hover,
+.footer-link:hover,background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
 .footer-map:focus,
 .footer-link:focus {
     color: var(--accent-text-color);
 }
+
+
+/* ----------------------BACKDROP---------------------- */
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    pointer-events: none;
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 528px;
+    height: 581px;
+    
+    
+    
+    background: var(--primary-background-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.close{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-top: 8px;
+    margin-right: 8px;
+    color: var(--header-logo-text);
+    background-color: var(--primary-background-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-svg{
+    fill: var(--header-logo-text) ;
+
+}
+
+
