--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,10 @@ span.logo-black {
     height: 12px;
     margin-right: 10px;
     fill: var(--primary-text-color);
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -130,10 +134,12 @@ span.logo-black {
     height: 16px;
     margin-right: 10px;
     fill: var(--primary-text-color);
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.checklist-nav-mobile:hover {
-    fill: var(--accent-text-color);
-}
+
 
 
 
@@ -142,19 +148,30 @@ span.logo-black {
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
-}
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+
 .site-nav .link.corrent {
     color: var(--accent-text-color);
 }
-.site-nav .link:hover, 
-.site-nav .link:focus{
-    color: var(--accent-text-color) ;    
+
+.site-nav .link:hover,
+.site-nav .link:focus {
+    color: var(--accent-text-color);
 }
 
 .header-adress {
     color: var(--primary-text-color);
     display: flex;
     align-items: center;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
 .header-adress:hover,
@@ -171,6 +188,7 @@ span.logo-black {
 .header-adress:focus .checklist-nav-mobile {
     fill: var(--accent-text-color);
 }
+
 
 .site-nav .link,
 .header-adress {
@@ -248,6 +266,11 @@ span.logo-black {
     display: inline-block;
     min-width: 200px;
     border: 1px solid transparent;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .hero-button:hover,
@@ -270,6 +293,11 @@ span.logo-black {
     padding: 6px 22px;
     border-radius: 4px;
     border-color: transparent;
+    box-shadow:none;
+
+    transition-property: color, background-color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
 
 }
 .primary-button:hover,
@@ -434,6 +462,7 @@ margin-left: 30px;
     height: 44px;
     /* justify-content: center;
     align-items: center; */
+    
 }
 
 
@@ -445,11 +474,23 @@ margin-left: 30px;
     align-items: center;
     border-radius: 50%;
     fill: var(--primary-icon-color);
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
+
+    
 }
 
 .team-social-items:hover,
 .team-social-items:focus{
     background-color: var(--accent-text-color);
+}
+
+.team-social-items .link-social{
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-items:hover .link-social,
@@ -525,24 +566,27 @@ margin-left: 30px;
     flex-wrap: wrap;
 }
 
-.section-works-item:hover
+/* .section-works-item:hover
 .section-works-item:focus{
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
 0px 1px 2px rgba(0, 0, 0, 0.08),
 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+} */
 
 .section-works-checklist{
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
     border: 1px solid #EEEEEE;
+    position: relative;
+    box-shadow: none;
+
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-works-checklist:hover{box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-0px 4px 4px rgba(0, 0, 0, 0.06),
-1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 .section-works-checklist:nth-child(3n) {
     margin-right: 0;
 }
@@ -565,6 +609,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     margin: 0;
     padding: 63px 24px;
     transform: translateY(100%);
+    transition-property: transform, border;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2 ,1);
 
     background-color: var(--bgc-hover-portfolio);
@@ -573,11 +618,12 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
-
 }
 
-.section-works-checklist{
-    border: 1px solid #EEEEEE;
+.section-works-checklist:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .section-works-checklist:hover .blue-text,
@@ -585,8 +631,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
 
     transform: translateY(0%);
     border: 1px solid #EEEEEE;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  }
 
 
 /* ------------------------clients--------------------- */
@@ -621,7 +666,18 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     align-items: center;
     display: flex;
     border: 1px solid #AFB1B8;
+
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.clients-link .link-company{
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .clients-link:hover .link-company{
     fill: var(--accent-text-color)
 }
@@ -631,7 +687,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     border: 1px solid #2196F3;
 }
 
-/* footer */
+/*----------------------- footer------------------ */
 .footer {
     background-color: var(--footer-hero-background-color);
     color: var(--primary-background-color);
@@ -661,6 +717,10 @@ span.logo-white {
     font-style: normal;
 
     margin-bottom: 9px;
+
+        transition-property: color;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-left{
@@ -668,8 +728,8 @@ span.logo-white {
 }
 
 .social{
-        padding-top: 12px;
-        width: 206px;
+    padding-top: 12px;
+    width: 206px;
 }
 
 
@@ -694,6 +754,12 @@ span.logo-white {
     background-color:rgba(255, 255, 255, 0.1);;
     fill: var(--secondary-text-color);
     border-radius: 50%;
+
+    transition-property:background-color;
+    transition-duration: 2500ms;
+    transition-timing-function:transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
 .footer-social-items:hover,
@@ -717,6 +783,10 @@ background-color:var(--accent-text-color);
     font-size: 14px;
     line-height: 1.71;
     font-style: normal;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-item:not(:last-child) {
@@ -728,13 +798,12 @@ background-color:var(--accent-text-color);
 }
 
 .footer-map:hover,
-.footer-link:hover,background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 4px;
+.footer-link:hover,
 .footer-map:focus,
-.footer-link:focus {
+.footer-link:focus{
     color: var(--accent-text-color);
 }
+
 
 
 /* ----------------------BACKDROP---------------------- */
@@ -746,12 +815,13 @@ border-radius: 4px;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
+    transition: opacity 250ms linear, visibility 250ms linear;
 }
 
 .backdrop.is-hidden{
     opacity: 0;
     pointer-events: none;
-    pointer-events: none;
+    visibility: hidden;
 }
 
 .modal{
@@ -761,7 +831,7 @@ border-radius: 4px;
     transform: translate(-50%, -50%);
 
     width: 528px;
-    height: 581px;
+    min-height: 581px;
     
     
     
@@ -770,7 +840,7 @@ border-radius: 4px;
     border-radius: 4px;
 }
 
-.close{
+/* .close{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -783,10 +853,28 @@ border-radius: 4px;
     color: var(--header-logo-text);
     background-color: var(--primary-background-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
+} */
+
+
+.close{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    color: var(--header-logo-text);
+    background-color: var(--primary-background-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    right: 8px;
+    top: 8px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+
 }
 
+
 .modal-svg{
-    fill: var(--header-logo-text) ;
+    fill: var(--header-logo-text);
 
 }
 
