--- a/css/styles.css
+++ b/css/styles.css
@@ -451,7 +451,6 @@ margin-left: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 260px;
     gap: 10px;
     
 }
@@ -666,6 +665,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     align-items: center;
     display: flex;
     border: 1px solid #AFB1B8;
+    border-radius: 4px;
 
     transition-property: border;
     transition-duration: 250ms;
@@ -839,21 +839,6 @@ background-color:var(--accent-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 }
-
-/* .close{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    margin-left: auto;
-    margin-top: 8px;
-    margin-right: 8px;
-    color: var(--header-logo-text);
-    background-color: var(--primary-background-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-} */
 
 
 .close{
